BUG #14532

Added FIELD_TYPE_BIT to field method 'needs_quotes' to make BIT columns
work.